--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ body {
             padding-bottom: 1%;
            
         }
+        #username{
+            animation: animate1 5s linear infinite;
+        }
         h1{
             position: relative;
             font-size: 40px;
@@ -86,3 +89,22 @@ body {
         }
 
     }
+    @keyframes animate1
+    {  
+        0%,18%,20%,50.1%,60%,65.1%,80%,90.1%,92%
+        {
+            color: #ff0000;
+            box-shadow: none;
+        }
+        18.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100%
+        {
+            color: rgb(51, 152, 177);
+            box-shadow: 0 0 10px #03bcf4,
+            0 0 20px #03bcf4,
+            0 0 40px #03bcf4,
+            0 0 80px #03bcf4,
+            0 0 160px #03bcf4,
+        }
+
+    }
+    
